--- a/template.yaml
+++ b/template.yaml
@@ -573,12 +573,12 @@ Outputs:
     Description: S3 Bucket for hosting web frontend
     Value: !Ref WebSiteBucket
 
-  # UserPoolId:
-  #   Description: "Cognito User Pool ID"
-  #   Value: !Ref UserPool
-  # UserPoolClientId:
-  #   Description: "Cognito User Pool Client ID"
-  #   Value: !Ref UserPoolClient
+  UserPoolId:
+    Description: "Cognito User Pool ID"
+    Value: !Ref UserPool
+  UserPoolClientId:
+    Description: "Cognito User Pool Client ID"
+    Value: !Ref UserPoolClient
   # UserPoolDomain:
   #   Description: "Cognito User Pool Domain"
   #   Value: !Sub 'https://${UserPoolDomain.Domain}.auth.${AWS::Region}.amazoncognito.com'
