--- a/template.yaml
+++ b/template.yaml
@@ -582,9 +582,9 @@ Outputs:
   # UserPoolDomain:
   #   Description: "Cognito User Pool Domain"
   #   Value: !Sub 'https://${UserPoolDomain.Domain}.auth.${AWS::Region}.amazoncognito.com'
-  # Authority:
-  #   Description: "Cognito User Pool Authority URL (for OIDC client)"
-  #   Value: !Sub 'https://cognito-idp.${AWS::Region}.amazonaws.com/${UserPool}'
+  Authority:
+    Description: "Cognito User Pool Authority URL (for OIDC client)"
+    Value: !Sub 'https://cognito-idp.${AWS::Region}.amazonaws.com/${UserPool}'
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
