--- a/template.yaml
+++ b/template.yaml
@@ -579,9 +579,9 @@ Outputs:
   UserPoolClientId:
     Description: "Cognito User Pool Client ID"
     Value: !Ref UserPoolClient
-  # UserPoolDomain:
-  #   Description: "Cognito User Pool Domain"
-  #   Value: !Sub 'https://${UserPoolDomain.Domain}.auth.${AWS::Region}.amazoncognito.com'
+  UserPoolDomain:
+    Description: "Cognito User Pool Domain"
+    Value: !Sub 'https://${UserPoolDomain.Domain}.auth.${AWS::Region}.amazoncognito.com'
   Authority:
     Description: "Cognito User Pool Authority URL (for OIDC client)"
     Value: !Sub 'https://cognito-idp.${AWS::Region}.amazonaws.com/${UserPool}'
